# Helium-Sync

./: .gitignore  Cargo.toml  LICENSE  README.md  helium-sync-gui
.github/workflows/: release.yml
aur/: PKGBUILD  helium-sync.desktop  helium-sync.service
frontend/: index.html
frontend/src/: App.jsx  index.css
src/: config.rs  drm.rs  main.rs  sync.rs  watcher.rs  web.rs
