[package]
name = "helium-sync-daemon"
version = "0.3.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
axum = { version = "0.7.5" }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
rust-embed = { version = "8.4" }
mime_guess = "2.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
sysinfo = "0.30"
zip = { version = "2.1", default-features = false, features = ["deflate"] }
aes-gcm = "0.10.3"
pbkdf2 = "0.12.2"
sha2 = "0.10.8"
rand = "0.8.5"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5.0"
urlencoding = "2.1"
base64 = "0.22.1"
